--- a/files/httpd/httpd.conf
+++ b/files/httpd/httpd.conf
@@ -161,7 +161,7 @@ DocumentRoot "/apps/hello-http/html"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex hello.html
 </IfModule>
 
 #
